# FollowMyLead2.0

./: .breakpoints  .gitignore  .replit  API_DOCUMENTATION.md  README.md  app.py  auth.py  aws_helpers.py  build.json  components_ui_progress.tsx  config.py  database.py  env-config.json  error_handlers.py  errors.py  gunicorn.conf.py  lead_scoring.py  main.py  mock_data.json  models.py  next.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  replit.nix  replit_zip_error_log.txt  requirements.txt  response.json  routes.py  routes.py.bak3  sample_leads.csv  tailwind.config.js  test_api.py  test_endpoints.js  test_endpoints_v2.js  test_protected_routes.py  tsconfig.json  utils.py  validators.py  (+3 more)
.cache/nix/: binary-cache-v6.sqlite
.ebextensions/: 01-options.config  options.config
.next/: prerender-manifest.js  routes-manifest.json  trace
.next/server/: app-paths-manifest.json  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/types/: link.d.ts
.upm/: store.json
FML_better/: FML_Better.py
app/: layout.tsx
fix_1/: next.config.js  tailwind.config.ts
frontend/: .ebignore  .env.example  .gitignore  index.html  next.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.ts
lambda_functions/: Dockerfile  auth.py  lambda_db.py  lambda_models.py  requirements.txt
lambda_layers/: Dockerfile  Dockerfile.amd64
prisma/: schema.prisma
services/: __init__.py  api.ts  lead_scoring_service.py
templates/: index.html
utils/: __init__.py  aws_secrets.py  serializers.py
(+180 files in other folders)
