[project]
name = "repl-nix-followmylead20"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=2.2.0",
    "flask-sqlalchemy>=3.0.2",
    "psycopg2-binary>=2.9.9",
    "pyjwt>=2.8.0",
    "flask-cors>=4.0.0",
    "flask-login>=0.6.3",
    "python-dotenv>=0.19.0",
    "werkzeug",
    "python-jwt",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.36",
    "jwt",
]
